<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="414dp"
        android:layout_height="80dp"
        android:background="@color/azulzinho"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="68dp"
            android:layout_marginTop="33dp"
            android:layout_marginEnd="0dp"
            android:text="@string/textTitle_1"
            android:textColor="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/headerTitle"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <TextView
        android:id="@+id/textParagraf1"
        android:layout_width="150dp"
        android:layout_height="270dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:justificationMode="inter_word"
        android:text="@string/textParagraf1"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/textParagraf2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHeader"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textParagraf2"
        android:layout_width="153dp"
        android:layout_height="356dp"
        android:layout_marginEnd="20dp"
        android:justificationMode="inter_word"
        android:text="@string/textParagraf2"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textParagraf1"
        app:layout_constraintTop_toTopOf="@+id/textParagraf1"
        tools:ignore="TextSizeCheck" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="textParagraf2" />

    <Button
        android:id="@+id/btnDireita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/azulzinho"
        android:text="@string/textBTN3"
        android:textSize="16sp"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnEmpate"
        app:layout_constraintTop_toTopOf="@+id/btnEmpate"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnEsquerda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/azulzinho"
        android:text="@string/textBTN1"
        android:textSize="16sp"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toStartOf="@+id/btnEmpate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnEmpate"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnEmpate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/azulzinho"
        android:text="@string/textBTN2"
        android:textSize="16sp"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toStartOf="@+id/btnDireita"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnEsquerda"
        app:layout_constraintTop_toBottomOf="@+id/barrier2"
        tools:ignore="TextContrastCheck" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="btnDireita,btnEmpate,btnEsquerda" />

    <Button
        android:id="@+id/btnBackToMenu3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="166dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="154dp"
        android:text="@string/btnBackToMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEmpate" />

</androidx.constraintlayout.widget.ConstraintLayout>