<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="700dp"
        android:layout_height="80dp"
        android:layout_marginBottom="16dp"
        android:background="@color/azulzinho"
        android:rotation="-45"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"></RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="700dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:background="@color/azulzinho"
        android:rotation="-45"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></RelativeLayout>

    <Button
        android:id="@+id/btnTrabalho03"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:text="@string/buttomName3"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout3"
        app:layout_constraintEnd_toEndOf="@+id/btnTrabalho02"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnTrabalho02"
        app:layout_constraintTop_toBottomOf="@+id/btnTrabalho02" />

    <Button
        android:id="@+id/btnTrabalhoNetflix"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/btnTrabalho02"
        app:layout_constraintEnd_toEndOf="@+id/btnTrabalho02"
        app:layout_constraintStart_toStartOf="@+id/btnTrabalho02"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />

    <Button
        android:id="@+id/btnTrabalho02"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/buttomName1"
        app:layout_constraintBottom_toTopOf="@+id/btnTrabalho03"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTrabalhoNetflix" />

</androidx.constraintlayout.widget.ConstraintLayout>